--- a/giftlink-backend/util/import-mongo/.env
+++ b/giftlink-backend/util/import-mongo/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:MTA4Mzcta2lyc3Rp@localhost:27017
+MONGO_URL=mongodb://root:MTU5NjEtdmxwcmFz@localhost:27017
 DATASRC=gifts.json
